2011-08-16  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m (-drawGState:...): Use CAIRO_EXTEND_PAD
	on the pattern to prevent blurred edges when scaling up.

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/CairoGState.m (-DPSstroke:): If the line width is
	0, temporarily set it to 1 unit wide (in device space.) This
	is an attempt at matching the behaviour of the setlinewidth
	PostScript operator, which is supposed to interpret 0 as meaning
	the thinnest line that the output device can draw.
	Note that Quartz (and cairo) draw nothing with a line width of 0.

2011-08-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tools/xpbs.m: Add some more comments

2011-08-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* configure.ac: Test for Xfixes
	* configure: Regenerate
 	* config.h.in: Regenerate
	* Tools/xpbs.m: If Xfixes is available, use it to receive notifications when the
	owner of an X11 selection changes.

	In the future we should invalidate the list of cached pasteboard types when this
	happens, so, e.g. copying text from gnome-terminal, the general pasteboard will only
	have the text type, but subsequently copying text from OpenOffice.org, the general
	pasteboard will have plain text and RTF types (currently we don't do this, so
	you can't paste RTF contents unless it is in the clipboard when gpbs starts.)

	The above problem is also why DND from X to GNUstep doesn't work - the dragging
	pasteboard types are never updated.

2011-08-04  Eric Wasylishen  <ewasylishen@gmail.com>

	* Tools/xpbs.m: Get copy and paste of rich text from OpenOffice.org
	to Ink working.

	- OOo uses the MIME type "text/richtext", so make that another alias for RTF
	- Fix an obscure bug in measuring the size of the return buffer of
	XGetWindowProperty. When an array of Atom's is returned xlib will claim
	that they are 32-bit when in fact they may be 64-bit. This was causing