@@ -1,3 +1,9 @@
+2011-09-11  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Source/cairo/CairoGState.m (-drawGState:...): Check that the source
+	context is non-NULL before calling cairo_get_target on it. Log a warning
+	when either the source context or target context is NULL.
+
 2011-08-16  Eric Wasylishen  <ewasylishen@gmail.com>
 
 	* Source/cairo/CairoGState.m (-drawGState:...): Use CAIRO_EXTEND_PAD
